# ml-demo-fastapi-k8s

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  kubernetes.yaml  pyproject.toml
.github/workflows/: deployment.yaml
fastapi_app/: main.py
fastapi_app/transforms/: videotransforms.py
streamlit/: app.py
